# miniscript2

./: .clangd  .gitignore  CLAUDE.md  README.md
cpp/: CMakeLists.txt  Makefile  miniscript.h
cpp/compiler/: Makefile  MiniScriptLexer.cpp  MiniScriptLexer.h  MiniScriptParser.cpp  ShiftReduceParserCode.cpp  ShiftReduceParserCode.h  test_parser
cpp/core/: CS_Dictionary.h  CS_List.cpp  CS_List.h  CS_Math.cpp  CS_Math.h  CS_String.cpp  CS_String.h  CS_value_util.cpp  CS_value_util.h  C_CORE_LAYERS.md  GCItems.cpp  GCItems.h  GCManager.cpp  GCManager.h  GCSet.h  IGCSet.h  MemPool.cpp  MemPool.h  StringPool.cpp  StringPool.h  StringStorage.c  StringStorage.cpp  StringStorage.h  VarMapBacking.cpp  VarMapBacking.h  core_includes.h  cstr_arena.h  debug_trivial.cpp  dispatch_macros.h  gc.c  gc.cpp  gc.h  gc_debug_output.c  gc_debug_output.h  hashing.cpp  hashing.h  host_api.cpp  keyboard.cpp  keyboard.h  layer_defs.h  (+23 more)
cpp/editline/: complete.c  config.h  editline.c  sysunix.c
cs/: AST.cs  App.cs  Assembler.cs  Bytecode.cs  CodeEmitter.cs  CodeGenerator.cs  CoreIntrinsics.cs  DateTimeUtils.cs  Disassembler.cs  ErrorPool.cs  ErrorTypes.cs  FuncDef.cs  GCInterfaces.cs  GCItems.cs  GCManager.cs  GCSet.cs  IGCItem.cs  IGCSet.cs  IOHelper.cs  Interpreter.cs  Intrinsic.cs  IntrinsicAPI.cs  IntrinsicResult.cs  LangConstants.cs  Lexer.cs  MemPoolShim.cs  MiniScript2.csproj  PRNG.cs  Parselet.cs  Parser.cs  ShellIntrinsics.cs  ShiftReduceParserCode.cs  StringUtils.cs  UnitTests.cs  VM.cs  VMVis.cs  Value.cs  ValueError.cs  ValueFuncRef.cs  VarMap.cs
examples/: acey-deucey.ms  vars.ms  (+34 more)
(+141 files in other folders)
